--- a/Uni3P1/index.html
+++ b/Uni3P1/index.html
@@ -16,13 +16,13 @@
         <p>La Patagonia argentina es una de las cuatro regiones para el
             desarrollo económico y social de la República Argentina.</p>
         <p>Está formada por:</p>
-        <ul class="lista">
+        <ul>
             <li>Provincia de <a href="#">Chubut</a></li>
-            <li class="prov">Provincia de <a  href="#">Neuquén</a></li>
+            <li class="prov">Provincia de <a class="prov" href="#">Neuquén</a></li>
             <li>Una parte de la Provincia de <a href="#">La Pampa</a></li>
             <li>Una parte de la Provincia de <a href="#">Buenos Aires</a></li>
             <li>El extremo sur de la Provincia de <a href="#">Mendoza</a></li>
-            <li class="prov">Provincia de <a  href="#">Río Negro</a></li>
+            <li class="prov">Provincia de <a class="prov" href="#">Río Negro</a></li>
             <li>Provincia de <a href="#">Santa Cruz</a></li>
             <li>Provincia de <a href="#">Tierra del Fuego</a></li>
             <li>Antártida e Islas del Atlántico Sur</li>
