--- a/Uni4/prac-word.html
+++ b/Uni4/prac-word.html
@@ -30,5 +30,20 @@
     <input type="number" id="cant-correctas" min="0" placeholder="Cantidad preguntas correctas"><br>
     <input type="button" id="porcentaje-calcular" onclick="CalcularPorcentaje()" value="Calcular nivel">
     <p id="resultado-porcentaje"></p>
+    <h5>Ej 4</h5>
+    <p>Ingreso de info...</p>
+    <h5>Ej 5</h5>
+    <!--) El usuario debe ingresar un número en un prompt, 
+        el prompt debe volver a abrirse para pedir el valor si no es un numero >0.
+        Cuando el numero sea >0 calcular el factorial y mostrarlo con una alerta.-->
+    <input type="button" value="Irgresar numero" id="boton-prompt" onclick="EjPrompt()">
+    <h5>Ej 6</h5>
+    <!--
+        Escribir un programa que pida al usuario que ingrese una palabra clave en un input. 
+        El usuario debe ingresar la palabra y presionar un botón “Validar”
+    -->
+    <input type="password" placeholder="Ingrese la clave" id="clave">
+    <input type="button" value="Validar" id="validar" onclick="ValidarClave()">
+    <p id="resultado-validacion"></p>
 </body>
 </html>
