--- a/Uni4/prac-word.html
+++ b/Uni4/prac-word.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="word.js" defer></script>
+    <script src="js/word.js" defer></script>
     <title>Practica Word</title>
 </head>
 <body>
