--- a/Uni5/index.html
+++ b/Uni5/index.html
@@ -29,6 +29,8 @@
 
         <h3>Hacer</h3>
         <ul id="incomplete-tasks">
+            <!--USA LA FUNCION buildLi(task)-->
+            <!--
             <li>
                 <input type="checkbox">
                 <label>Pagar cuentas</label>
@@ -47,10 +49,13 @@
                 </button>
                 <button class="delete"><i class="fas fa-trash-alt"></i></button>
             </li>
+            -->
         </ul>
 
         <h3>Completado</h3>
         <ul id="completed-tasks">
+            <!--USA LA FUNCION buildLi(task)-->
+            <!--
             <li>
                 <input type="checkbox" checked>
                 <label>Dentista</label>
@@ -60,6 +65,7 @@
                 </button>
                 <button class="delete"><i class="fas fa-trash-alt"></i></button>
             </li>
+            -->
         </ul>
     </div>
 </body>
